wwr/styles/rafting.css
:root {
    --primary-color: #9AD4D6; /* Tiffany Blue */
    --secondary-color: #5C6F68; /* Feldgrau */
    --accent1-color: #A77464; /* Brown Sugar */
    --accent2-color: #FFE787; /* Jasmine */
    --heading-font: "bubblegum sans", sans-serif;
    --body-font: "raleway", sans-serif;
}

header {
    color: var(--accent2-color);
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box
}

body {
    font-family: var(--body-font);
    color: var(--accent1-color)
}

header, main, footer {
    width: 840px;
    margin: 0 auto;
}

h1, h2 {
    font-family: var(--heading-font);
    color: var(--primary-color)
}

p1 {
    font-family: var(--body-font);
    color: #fff;
    
}

nav, p, section, article {
    margin: 16px;
    padding: 8px;
}

.socialmedia a {
    text-decoration: none;
}

.hero {
    position: relative;
}
.hero img {
    display: block;
    width: 100%;
    height: auto
}

h1 {
    position: absolute;
    top: 20px;  
    width: 100%;
    padding: 16px;
    text-align: center;
    opacity: .7; 
    background-color: var(--accent1-color);
    color: #fff
}

article {
    position: absolute;
    bottom: 0;
}

.hero article img {
    float: right;
    width: 125px
}

